Move to kotlin